# poetry-plugin-multiverse

./: .gitignore  README.md  poe_tasks.toml  pyproject.toml  sandbox.toml  tasks.toml
.github/workflows/: daily.yml  main.yml  publish.yml
envs/: tasks.toml
envs/latest/: pyproject.toml
envs/v1/: pyproject.toml
poetry_multiverse_plugin/: cli.py  commands.py  config.py  errors.py  installers.py  packages.py  plugin.py  repositories.py  root.py  runner.py  workspace.py
poetry_multiverse_plugin/cli/: progress.py  status.py
poetry_multiverse_plugin/commands/: check.py  info.py  lock.py  run.py  show.py  workspace.py
poetry_multiverse_plugin/hooks/: build.py  hook.py  lock.py
poetry_plugin_multiverse/: dependencies.py  packages.py  plugin.py  publish.py  repositories.py  root.py  workspace.py
poetry_plugin_multiverse/cli/: status.py  utils.py
poetry_plugin_multiverse/commands/: check.py  info.py  lock.py  run.py  show.py  workspace.py
poetry_plugin_multiverse/compatibility/: factory.py
poetry_plugin_multiverse/hooks/: build.py  hook.py  lock.py
test-libs/: pyproject.toml
tests/: conftest.py  test_commands.py  test_config.py  test_dependencies.py  test_errors.py  test_installers.py  test_packages.py  test_plugin.py  test_publish.py  test_repositories.py  test_runner.py  test_workspace.py  utils.py
tests/cli/: test_status.py
tests/commands/: test_check.py  test_info.py  test_lock.py  test_run.py  test_show.py  test_workspace.py
tests/hooks/: test_build.py  test_hook.py  test_lock.py
