[tool.poetry]
name = "poetry-multiverse-plugin"
version = "0.0.0"
description = "Workspace support for Poetry"
authors = ["Wes Miller <37603175+wmiller4@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Topic :: Software Development :: Build Tools"
]
keywords = ["monorepo", "poetry", "workspace"]

[tool.poetry.dependencies]
python = "^3.8"
poetry = "^1.8"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.366"
ruff = "^0.4.8"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.poetry.plugins."poetry.application.plugin"]
multiverse = "poetry_multiverse_plugin.plugin:MultiversePlugin"

[tool.poe]
include = "tasks.toml"

[tool.pytest.ini_options]
addopts = "--cov-report=xml:cov.xml --cov-report term --cov=poetry_multiverse_plugin"

[tool.poetry-dynamic-versioning]
enable = true
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
