[tool.poetry]
name = "poetry-plugin-multiverse"
version = "0.0.0"
description = "Workspace support for Poetry"
authors = ["Wes Miller <37603175+wmiller4@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wmiller4/poetry-plugin-multiverse"
homepage = "https://irregular-expressions.net/multiverse"
documentation = "https://irregular-expressions.net/multiverse"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Topic :: Software Development :: Build Tools"
]
keywords = ["monorepo", "poetry", "workspace"]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.8"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.391"
ruff = "^0.8.4"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.plugins."poetry.application.plugin"]
multiverse = "poetry_plugin_multiverse.plugin:MultiversePlugin"

[tool.poe]
include = "tasks.toml"

[tool.pytest.ini_options]
addopts = "--cov-report=xml:cov.xml --cov-report term --cov=poetry_plugin_multiverse"

[tool.poetry-dynamic-versioning]
enable = true
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
