[tool.poetry]
name = "poetry-plugin-multiverse"
version = "0.0.0"
description = "Workspace support for Poetry"
authors = ["Wes Miller <37603175+wmiller4@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wmiller4/poetry-plugin-multiverse"
homepage = "https://irregular-expressions.net/multiverse"
documentation = "https://irregular-expressions.net/multiverse"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Topic :: Software Development :: Build Tools"
]
keywords = ["monorepo", "poetry", "workspace"]

[tool.poetry.dependencies]
python = "^3.10"
poetry = ">=1.8,<3"

[tool.poetry.group.dev.dependencies]
test-libs = { path = "test-libs" }

[tool.poetry.plugins."poetry.application.plugin"]
multiverse = "poetry_plugin_multiverse.plugin:MultiversePlugin"

[tool.pyright]
pythonVersion = "3.10"

[tool.pytest.ini_options]
addopts = "--cov-report=xml:cov.xml --cov-report term --cov=poetry_plugin_multiverse"

[tool.poetry-dynamic-versioning]
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
