[tool.poetry]
name = "test-libs"
version = "0.0.0"
authors = ["Wes Miller <37603175+wmiller4@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyright = "^1.1.391"
ruff = "^0.8.4"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
