[tool.poetry]
name = "test-latest"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
poetry-plugin-multiverse = { path = "../.." }
poetry = { git = "https://github.com/python-poetry/poetry.git" }

[tool.poetry.group.dev.dependencies]
test-libs = { path = "../../test-libs" }

[tool.poe]
include = "../tasks.toml"
